--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -99,8 +99,6 @@
    "outputs": [],
    "source": [
     "SeqDat = Data_Src_Load(Name_Dict)\n",
-    "SeqDat['Sequence_letter-encrypted'] = SeqDat['Sequence_letter-encrypted'].str.upper()\n",
-    "SeqDat.head(3)\n",
     "# some statistical information of the samples\n",
     "Samples_ValCount = SeqDat['Sequence_letter-encrypted'].value_counts()\n",
     "Num_UniqueSamples = len(Samples_ValCount)\n",
@@ -110,7 +108,8 @@
     "\n",
     "print('Statistical information of input sequence:')\n",
     "print('Unique samples: {}'.format(Num_UniqueSamples))\n",
-    "print('Number of replicates: min: {} - median: {} - max: {}'.format(Min_ReplicateNumber, Median_ReplicateNumber, Max_ReplicateNumber))"
+    "print('Number of replicates: min: {} - median: {} - max: {}'.format(Min_ReplicateNumber, Median_ReplicateNumber, Max_ReplicateNumber))\n",
+    "SeqDat.head(3)"
    ]
   },
   {
@@ -230,7 +229,7 @@
    "outputs": [],
    "source": [
     "# For histogram of sequence diversity you can either root the distance to the most common nucleotide on each position or provide an external reference\n",
-    "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=1)\n",
+    "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=0)\n",
     "    \n",
     "# plt.rc('text', usetex=False)\n",
     "plt.hist(mydist*100, bins=20) # BG42: [3,6:221]; BG35:[2,222:]\n",
