--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "Name_Dict = dict()\n",
-    "with open('config.txt') as Conf:\n",
+    "with open('config_ecol74.txt') as Conf:\n",
     "    myline = Conf.read().splitlines()\n",
     "    for line in myline:\n",
     "        if not line.startswith('#'):\n",
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
