sequence length quality control

--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already existent data directory  data-dengyu_Ecol_74 .\n"
+     ]
+    }
+   ],
    "source": [
     "Name_Dict = dict()\n",
-    "with open('config_Geobac.txt') as Conf:\n",
+    "with open('config_ecol74.txt') as Conf:\n",
     "    myline = Conf.read().splitlines()\n",
     "    for line in myline:\n",
     "        if not line.startswith('#'):\n",
@@ -98,9 +106,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sequence</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Error</th>\n",
+       "      <th>Samples</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Sequence_label-encrypted</th>\n",
+       "      <th>Sequence_letter-encrypted</th>\n",
+       "      <th>GC-content</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>PL2</td>\n",
+       "      <td>[[0, 0, 0, 1], [0, 0, 0, 1], [0, 0, 1, 0], [1,...</td>\n",
+       "      <td>ML2</td>\n",
+       "      <td>9790.185077</td>\n",
+       "      <td>340.488926</td>\n",
+       "      <td>3</td>\n",
+       "      <td>74</td>\n",
+       "      <td>[3, 3, 2, 0, 1, 0, 0, 3, 3, 0, 0, 3, 1, 0, 3, ...</td>\n",
+       "      <td>TTGACAATTAATCATCCGGCTCGTATAATGTGCGGAATTGTAAGCG...</td>\n",
+       "      <td>0.405405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>PL3</td>\n",
+       "      <td>[[0, 0, 0, 1], [0, 0, 0, 1], [0, 0, 1, 0], [1,...</td>\n",
+       "      <td>ML3</td>\n",
+       "      <td>1770.433060</td>\n",
+       "      <td>39.393734</td>\n",
+       "      <td>3</td>\n",
+       "      <td>74</td>\n",
+       "      <td>[3, 3, 2, 0, 1, 0, 0, 3, 3, 0, 0, 3, 1, 0, 3, ...</td>\n",
+       "      <td>TTGACAATTAATCATCCGGCTCGTATAATGTGTGGAATTGTGGGCG...</td>\n",
+       "      <td>0.432432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>PL4</td>\n",
+       "      <td>[[0, 0, 0, 1], [0, 0, 0, 1], [0, 0, 1, 0], [1,...</td>\n",
+       "      <td>ML4</td>\n",
+       "      <td>24277.733503</td>\n",
+       "      <td>292.556764</td>\n",
+       "      <td>3</td>\n",
+       "      <td>74</td>\n",
+       "      <td>[3, 3, 2, 0, 1, 0, 0, 3, 3, 0, 0, 3, 1, 0, 3, ...</td>\n",
+       "      <td>TTGACAATTAATCATCCGGCTCGTATAATGTGTGGAATTGCGGGCG...</td>\n",
+       "      <td>0.445946</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index Name                                           Sequence Unnamed: 2  \\\n",
+       "0      0  PL2  [[0, 0, 0, 1], [0, 0, 0, 1], [0, 0, 1, 0], [1,...        ML2   \n",
+       "1      1  PL3  [[0, 0, 0, 1], [0, 0, 0, 1], [0, 0, 1, 0], [1,...        ML3   \n",
+       "2      2  PL4  [[0, 0, 0, 1], [0, 0, 0, 1], [0, 0, 1, 0], [1,...        ML4   \n",
+       "\n",
+       "       Activity       Error  Samples  Unnamed: 6  \\\n",
+       "0   9790.185077  340.488926        3          74   \n",
+       "1   1770.433060   39.393734        3          74   \n",
+       "2  24277.733503  292.556764        3          74   \n",
+       "\n",
+       "                            Sequence_label-encrypted  \\\n",
+       "0  [3, 3, 2, 0, 1, 0, 0, 3, 3, 0, 0, 3, 1, 0, 3, ...   \n",
+       "1  [3, 3, 2, 0, 1, 0, 0, 3, 3, 0, 0, 3, 1, 0, 3, ...   \n",
+       "2  [3, 3, 2, 0, 1, 0, 0, 3, 3, 0, 0, 3, 1, 0, 3, ...   \n",
+       "\n",
+       "                           Sequence_letter-encrypted  GC-content  \n",
+       "0  TTGACAATTAATCATCCGGCTCGTATAATGTGCGGAATTGTAAGCG...    0.405405  \n",
+       "1  TTGACAATTAATCATCCGGCTCGTATAATGTGTGGAATTGTGGGCG...    0.432432  \n",
+       "2  TTGACAATTAATCATCCGGCTCGTATAATGTGTGGAATTGCGGGCG...    0.445946  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SeqDat = Data_Src_Load(Name_Dict)\n",
     "SeqDat.head(3)"
@@ -119,9 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new train-test\n",
+      "Train and test data stored as: data-dengyu_Ecol_74/20200828_dengyu_Ecol_74_TrainTest-Data.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "# You can generate a new train-test split or use an existing file. \n",
     "# If the ML_Date is from the current date, it is assumed you generate a new regressor\n",
@@ -167,9 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalization: True\n"
+     ]
+    }
+   ],
    "source": [
     "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
     "if eval(Name_Dict['Data_Standard']):\n",
@@ -203,7 +336,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting new SVR regressor training for Activity_scaled\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of independent promoter library measurements\n",
     "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
@@ -277,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
