remove delete printout

--- a/4-Exploration-Space.ipynb
+++ b/4-Exploration-Space.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "Name_Dict = dict()\n",
-    "with open('config.txt') as Conf:\n",
+    "with open('config_EcolPtai.txt') as Conf:\n",
     "    myline = Conf.read().splitlines()\n",
     "    for line in myline:\n",
     "        if not line.startswith('#'):\n",
@@ -170,7 +170,12 @@
     "mybases, mycount = np.unique(np.sum(Base_SequencePosition.values, axis=1), return_counts=True)\n",
     "Comb_Numb = np.prod(np.power(mybases, mycount))\n",
     "print('Overall number of possible sequences:', Comb_Numb)\n",
-    "\n"
+    "\n",
+    "RefSeq_File = os.path.join(Data_Folder, 'RefSeq.txt')\n",
+    "NWT_File = os.path.join(Data_Folder, 'NucleotideWeightTable.pkl')\n",
+    "with open(RefSeq_File, 'w') as f:\n",
+    "    f.write(RefSeq)\n",
+    "Base_SequencePosition.to_pickle(NWT_File)"
    ]
   },
   {
