--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "Name_Dict = dict()\n",
-    "with open('config_ecol74.txt') as Conf:\n",
+    "with open('config_EcolPtai.txt') as Conf:\n",
     "    myline = Conf.read().splitlines()\n",
     "    for line in myline:\n",
     "        if not line.startswith('#'):\n",
