improved folder parameter

--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -39,7 +39,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from ExpressionExpert_Functions import Data_Src_Load, make_DataDir, ExpressionScaler, Sequence_Conserved_Adjusted, Insert_row_, ExpressionStrength_HeatMap, df_HeatMaps, ExpressionVariation_HeatMap, Sequence_Ref_DiffSum, Sequence_Dist_DiffSum, generate_distances, ExpressionMean_ttest\n",
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, make_DataDir, ExpressionScaler, Sequence_Conserved_Adjusted, Insert_row_, ExpressionStrength_HeatMap, df_HeatMaps, ExpressionVariation_HeatMap, Sequence_Ref_DiffSum, Sequence_Dist_DiffSum, generate_distances, ExpressionMean_ttest\n",
     "%matplotlib inline"
    ]
   },
@@ -49,7 +49,7 @@
    "source": [
     "### Variable setting\n",
     "\n",
-    "We load the naming conventions from 'config.txt'"
+    "We load the naming conventions and parameters for statistical analysis and regression from 'config.txt'"
    ]
   },
   {
@@ -58,29 +58,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = dict()\n",
-    "with open('config_EcolPtai.txt') as Conf:\n",
-    "    myline = Conf.read().splitlines()\n",
-    "    for line in myline:\n",
-    "        if not line.startswith('#'):\n",
-    "            (key, val) = line.split(':', 1)\n",
-    "            Name_Dict[str(key.strip())] = val.strip()\n",
-    "        \n",
+    "Name_Dict = init_Exp2('config_Spacer.txt')\n",
     "\n",
-    "Data_File = Name_Dict['Data_File']\n",
-    "# extract the filename for naming of newly generated files\n",
-    "File_Base = Name_Dict['File_Base']\n",
-    "# the generated files will be stored in a subfolder with custom name\n",
-    "Data_Folder = Name_Dict['Data_Folder']\n",
-    "# column name of expression values\n",
+    "ML_Date = Name_Dict['ML_Date']\n",
+    "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
+    "Data_Folder = 'data-{}'.format(File_Base) \n",
+    "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
+    "ML_Type = Name_Dict['ML_Regressor']\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
-    "# Extracting entropy cutoff for removal of non-informative positions\n",
-    "Entropy_cutoff = float(Name_Dict['Entropy_cutoff'])\n",
-    "# figure file type\n",
     "Fig_Type = Name_Dict['Figure_Type']\n",
-    "# Figure font size\n",
-    "FigFontSize = Name_Dict['Figure_Font_Size']\n",
-    "make_DataDir(Name_Dict)"
+    "FigFontSize = Name_Dict['Figure_Font_Size']\n"
    ]
   },
   {
@@ -179,7 +166,7 @@
     "    HM_File = os.path.join(Data_Folder, '{}_{}_{}_{}_{{}}.{}'.format(time.strftime('%Y%m%d'), File_Base, Fig_ID, Measure_Name.replace(' ',''), Fig_Type))   \n",
     "\n",
     "    # if you want to store the heat-maps switch the argument 'False' to 'True'\n",
-    "    df_HeatMaps(Expr_avg, 'Expression average', True, HM_File.format('Average'), cbar_lab=None, FigFontSize=FigFontSize)\n",
+    "    df_HeatMaps(Expr_avg, 'Expression average', True, HM_File.format('Average'), cbar_lab=None, FigFontSize=Name_Dict['Figure_Font_Size'])\n",
     "#     df_HeatMaps(Expr_var, 'Expression variance', True, HM_File.format('Variance'), cbar_lab=None, FigFontSize=FigFontSize)\n",
     "\n",
     "Expr_array = np.delete(Expr_array, Positions_removed, axis=0)\n",
