--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -43,7 +43,7 @@
     "import timeit\n",
     "import joblib\n",
     "import pickle\n",
-    "from ExpressionExpert_Functions import Data_Src_Load, make_DataDir, split_train_test, ExpressionScaler, Sequence_Conserved_Adjusted, MyRFR, MySVR, MyGBR\n",
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, make_DataDir, split_train_test, ExpressionScaler, Sequence_Conserved_Adjusted, MyRFR, MySVR, MyGBR\n",
     "from sklearn.model_selection import GroupShuffleSplit"
    ]
   },
@@ -53,7 +53,7 @@
    "source": [
     "### Variable setting\n",
     "\n",
-    "We load the naming conventions from 'config.txt'"
+    "We load the naming conventions and parameters for statistical analysis and regression from 'config.txt'"
    ]
   },
   {
@@ -62,29 +62,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = dict()\n",
-    "with open('config_EcolPtai.txt') as Conf:\n",
-    "    myline = Conf.read().splitlines()\n",
-    "    for line in myline:\n",
-    "        if not line.startswith('#'):\n",
-    "            (key, val) = line.split(':', 1)\n",
-    "            Name_Dict[str(key.strip())] = val.strip()\n",
-    "        \n",
+    "Name_Dict = init_Exp2('config_Spacer.txt')\n",
     "\n",
-    "Data_File = Name_Dict['Data_File']\n",
-    "# extract the filename for naming of newly generated files\n",
-    "File_Base = Name_Dict['File_Base']\n",
-    "# the generated files will be stored in a subfolder with custom name\n",
-    "Data_Folder = Name_Dict['Data_Folder']\n",
-    "# column name of expression values\n",
-    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
-    "# Extracting entropy cutoff for removal of non-informative positions\n",
-    "Entropy_cutoff = float(Name_Dict['Entropy_cutoff'])\n",
-    "# figure file type\n",
-    "Fig_Type = Name_Dict['Figure_Type']\n",
-    "# Figure font size\n",
-    "FigFontSize = Name_Dict['Figure_Font_Size']\n",
-    "make_DataDir(Name_Dict)"
+    "ML_Date = Name_Dict['ML_Date']\n",
+    "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
+    "Data_Folder = 'data-{}'.format(File_Base) \n",
+    "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
+    "ML_Type = Name_Dict['ML_Regressor']\n",
+    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n"
    ]
   },
   {
@@ -128,7 +113,6 @@
     "# If another ML_Date than the current date is chosen, an existing train-test division is loaded\n",
     "# The identifier is based on the date from the corresponding machine learning training.\n",
     "# True generates a new split, False loads an existing split\n",
-    "ML_Date = Name_Dict['ML_Date']\n",
     "GenSplit = True if ML_Date == time.strftime('%Y%m%d') else False\n",
     "if GenSplit:\n",
     "    print('new train-test')\n",
@@ -176,7 +160,7 @@
     "    SeqTrain, Expr_Scaler = ExpressionScaler(SeqTrain, Name_Dict)\n",
     "\n",
     "# removing non-informative positions where no base diversity exists, base one hot encoding\n",
-    "SeqTrain_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqTrain, Name_Dict, Entropy_cutoff=Entropy_cutoff)\n",
+    "SeqTrain_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqTrain, Name_Dict, Entropy_cutoff=float(Name_Dict['Entropy_cutoff']))\n",
     "\n",
     "print('Normalization: {}'.format(Name_Dict['Data_Standard']))"
    ]
@@ -206,8 +190,6 @@
    "outputs": [],
    "source": [
     "# Number of independent promoter library measurements\n",
-    "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
-    "ML_Type = Name_Dict['ML_Regressor']\n",
     "Regressor_Best = dict()\n",
     "# ML Random Forest training for number of independent promoter library measurements\n",
     "for Meas_Idx in range(Measure_Numb):\n",
