--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -13,13 +13,8 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This notebook guides through the analysis of an existing random forest regressor. The performance evaluation is based on the R^2 score from sklearn. The correlation of measured and predicted expression values is plotted. The feature importance from the random forest regression represent the contributions of each nucleotide-position to the prediction. They are extracted and visualized with a Logo-plot."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This notebook guides through the analysis of an existing ML regressor. The performance evaluation is based on the R^2 score from sklearn and cross validation. The correlation of measured and predicted expression values is plotted. The feature importance from tree-based regressions represent the contributions of each nucleotide-position and the GC content to the prediction. They are extracted and visualized with a Logo-plot.\n",
+    "\n",
     "## System initiation\n",
     "\n",
     "Loading all necessary libraries."
@@ -40,7 +35,7 @@
     "import joblib\n",
     "import pickle\n",
     "from math import sqrt\n",
-    "from ExpressionExpert_Functions import Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir\n",
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
     "from sklearn.metrics import r2_score, mean_squared_error, make_scorer\n",
     "%matplotlib inline\n",
@@ -62,40 +57,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = dict()\n",
-    "with open('config_EcolPtai.txt') as Conf:\n",
-    "    myline = Conf.read().splitlines()\n",
-    "    for line in myline:\n",
-    "        if not line.startswith('#'):\n",
-    "            (key, val) = line.split(':', 1)\n",
-    "            Name_Dict[str(key.strip())] = val.strip()\n",
-    "        \n",
+    "Name_Dict = init_Exp2('config_Spacer.txt')\n",
     "\n",
-    "Data_File = Name_Dict['Data_File']\n",
-    "# extract the filename for naming of newly generated files\n",
-    "File_Base = Name_Dict['File_Base']\n",
-    "# the generated files will be stored in a subfolder with custom name\n",
-    "Data_Folder = Name_Dict['Data_Folder']\n",
-    "# column name of expression values\n",
-    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
-    "# Extracting entropy cutoff for removal of non-informative positions\n",
-    "Entropy_cutoff = float(Name_Dict['Entropy_cutoff'])\n",
-    "# figure file type\n",
-    "Fig_Type = Name_Dict['Figure_Type']\n",
-    "# Figure font size\n",
-    "FigFontSize = Name_Dict['Figure_Font_Size']\n",
-    "make_DataDir(Name_Dict)"
+    "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
+    "Data_Folder = 'data-{}'.format(File_Base) \n",
+    "ML_Date = Name_Dict['ML_Date']\n",
+    "ML_Type = Name_Dict['ML_Regressor']\n",
+    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data manipulation\n",
-    "\n",
-    "For the machine learning the data is first separated into training and test sets. The training set is used to generate a standard scaler for expression standardization to zero mean and unit variance. On each position the entropy is calculated to assess how much nucleotide diversity has been sampled on each position. If at any position the entropy is zero, i.e. only one nucleotide is present in all samples, this position is removed because it is non-informative for further analysis (Position entropy analysis). \n",
-    "\n",
-    "### Loading train and test set used for training"
+    "## Loading training data"
    ]
   },
   {
@@ -104,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TrainTest_File = os.path.join(Data_Folder, '{}_{}_TrainTest-Data.pkl'.format(Name_Dict['ML_Date'], File_Base))\n",
+    "TrainTest_File = os.path.join(Data_Folder, '{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base))\n",
     "TrainTest_Data = pickle.load(open(TrainTest_File,'rb'))\n",
     "SeqTrain, SeqTest = TrainTest_Data['Train'], TrainTest_Data['Test']"
    ]
@@ -123,8 +98,6 @@
    "outputs": [],
    "source": [
     "# Random Forest Regressor file identifier for date\n",
-    "ML_Date = Name_Dict['ML_Date']\n",
-    "ML_Type = Name_Dict['ML_Regressor']\n",
     "\n",
     "# Number of independent promoter library measurements\n",
     "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
@@ -228,6 +201,8 @@
    "source": [
     "# Number of independent promoter library measurements\n",
     "Expr_Unit = Name_Dict['Expression_Unit']\n",
+    "FigFontSize = Name_Dict['Figure_Font_Size']\n",
+    "Fig_Type = Name_Dict['Figure_Type']\n",
     "\n",
     "for Meas_Idx in range(Measure_Numb): \n",
     "#     fig, axs = plt.subplots(nrows=1, ncols=1)\n",
