--- a/4-Exploration-Space.ipynb
+++ b/4-Exploration-Space.ipynb
@@ -41,7 +41,7 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from ExpressionExpert_Functions import Data_Src_Load, Sequence_Conserved_Adjusted, Insert_row_, ExpressionStrength_HeatMap, SequenceRandomizer_Parallel, Sequence_Ref_DiffSum, list_onehot, list_integer\n",
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, Sequence_Conserved_Adjusted, Insert_row_, ExpressionStrength_HeatMap, SequenceRandomizer_Parallel, Sequence_Ref_DiffSum, list_onehot, list_integer\n",
     "%matplotlib inline"
    ]
   },
@@ -60,28 +60,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = dict()\n",
-    "with open('config_EcolPtai.txt') as Conf:\n",
-    "    myline = Conf.read().splitlines()\n",
-    "    for line in myline:\n",
-    "        if not line.startswith('#'):\n",
-    "            (key, val) = line.split(':', 1)\n",
-    "            Name_Dict[str(key.strip())] = val.strip()\n",
-    "        \n",
+    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
     "\n",
-    "Data_File = Name_Dict['Data_File']\n",
-    "# extract the filename for naming of newly generated files\n",
-    "File_Base = Name_Dict['File_Base']\n",
-    "# the generated files will be stored in a subfolder with custom name\n",
-    "Data_Folder = Name_Dict['Data_Folder']\n",
-    "# column name of expression values\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
-    "# Extracting entropy cutoff for removal of non-informative positions\n",
-    "Entropy_cutoff = float(Name_Dict['Entropy_cutoff'])\n",
-    "# figure file type\n",
-    "Fig_Type = Name_Dict['Figure_Type']\n",
-    "# Figure font size\n",
-    "FigFontSize = Name_Dict['Figure_Font_Size']\n"
+    "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
+    "Data_Folder = 'data-{}'.format(File_Base) \n",
+    "Sequence_Distance_cutoff = float(Name_Dict['Sequence_Distance_cutoff'])\n",
+    "Synth_Seq_MaxNumber = int(Name_Dict['Synth_Seq_MaxNumber'])\n",
+    "Fig_Type = Name_Dict['Figure_Type']\n"
    ]
   },
   {
@@ -119,7 +105,8 @@
    "outputs": [],
    "source": [
     "# removing non-informative positions where no base diversity exists, base one hot encoding\n",
-    "SeqDat_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqDat, Name_Dict, Entropy_cutoff=Entropy_cutoff)\n",
+    "\n",
+    "SeqDat_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqDat, Name_Dict, Entropy_cutoff=float(Name_Dict['Entropy_cutoff']))\n",
     "\n",
     "# removing non-informative positions where no base diversity exists, based one hot encoding\n",
     "idx = 0\n",
@@ -144,9 +131,6 @@
     "# For each position the following amount of nucleotides were tested [-35:4, -34:4, -30:3, -10:4, -9:3, -8:4]\n",
     "# In total 2304 combinations are possible, these are further constrained by the maximum nucleotide distance to the reference sequence\n",
     "\n",
-    "Sequence_Distance_cutoff = float(Name_Dict['Sequence_Distance_cutoff'])\n",
-    "Synth_Seq_MaxNumber = int(Name_Dict['Synth_Seq_MaxNumber'])\n",
-    "\n",
     "# Reference promoter sequence\n",
     "if Name_Dict['RefSeq'] is not '':\n",
     "    RefSeq = Name_Dict['RefSeq']\n",
@@ -160,7 +144,7 @@
     "print('Reference sequence:', RefSeq)\n",
     "\n",
     "# Nucleotides that can be randomized because they sampling is above the entropy threshold\n",
-    "Pos_random = -1*(len(RefSeq)-np.arange(PSEntropy.shape[0])[PSEntropy>Entropy_cutoff])\n",
+    "Pos_random = -1*(len(RefSeq)-np.arange(PSEntropy.shape[0])[PSEntropy>float(Name_Dict['Entropy_cutoff'])])\n",
     "Base_SequencePosition = Seq_Pos_Sampled.iloc[Pos_random]\n",
     "print('Relevant positions and tested nucleotides')\n",
     "print(Base_SequencePosition)\n",
@@ -321,10 +305,9 @@
     "ML_Type = Name_Dict['ML_Regressor']\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "Sequence_column = Name_Dict['Sequence_column']\n",
-    "ID_Name = Name_Dict['ID_Col_Name']\n",
     "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
     "SynSeq_df = pd.DataFrame({Sequence_column: SynSeq_NearDist})\n",
-    "SynSeq_df[ID_Name] = SynSeq_df.index\n",
+    "SynSeq_df[Name_Dict['ID_Col_Name']] = SynSeq_df.index\n",
     "# GC content calculation\n",
     "AddFeat = eval(Name_Dict['Add_Feat'])[0]\n",
     "GCcont = [(SynSeq_df[Sequence_column][i].count('G')+SynSeq_df[Sequence_column][i].count('C'))/len(SynSeq_df[Sequence_column][i]) for i in range(len(SynSeq_df))]\n",
