--- a/5-Promoter-Prediction.ipynb
+++ b/5-Promoter-Prediction.ipynb
@@ -30,7 +30,7 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from ExpressionExpert_Functions import Data_Src_Load, Extract_MultLibSeq, Find_Near_Seq, Predict_SequenceActivity\n",
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, Extract_MultLibSeq, Find_Near_Seq, Predict_SequenceActivity\n",
     "%matplotlib inline"
    ]
   },
@@ -49,28 +49,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = dict()\n",
-    "with open('config.txt') as Conf:\n",
-    "    myline = Conf.read().splitlines()\n",
-    "    for line in myline:\n",
-    "        if not line.startswith('#'):\n",
-    "            (key, val) = line.split(':', 1)\n",
-    "            Name_Dict[str(key.strip())] = val.strip()\n",
-    "        \n",
+    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
     "\n",
-    "Data_File = Name_Dict['Data_File']\n",
-    "# extract the filename for naming of newly generated files\n",
-    "File_Base = Name_Dict['File_Base']\n",
-    "# the generated files will be stored in a subfolder with custom name\n",
-    "Data_Folder = Name_Dict['Data_Folder']\n",
-    "# column name of expression values\n",
-    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
-    "# Extracting entropy cutoff for removal of non-informative positions\n",
-    "Entropy_cutoff = float(Name_Dict['Entropy_cutoff'])\n",
-    "# figure file type\n",
-    "Fig_Type = Name_Dict['Figure_Type']\n",
-    "# Figure font size\n",
-    "FigFontSize = Name_Dict['Figure_Font_Size']\n"
+    "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
+    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n"
    ]
   },
   {
