config folder adaptation

--- a/0-Workflow.ipynb
+++ b/0-Workflow.ipynb
@@ -108,9 +108,9 @@
     "\n",
     "\n",
     "# extract the filename for naming of newly generated files\n",
-    "File_Base = Data_File.split('.')[0]\n",
-    "# the generated files will be stored in a subfolder with custom name\n",
-    "Data_Folder = 'data-{}'.format(File_Base)\n",
+    "# File_Base = Data_File.split('.')[0]\n",
+    "# # the generated files will be stored in a subfolder with custom name\n",
+    "# Data_Folder = 'data-{}'.format(File_Base)\n",
     "try:\n",
     "    os.mkdir(Data_Folder)\n",
     "    print('Data directory ', Data_Folder, 'created.')\n",
