update sequence distance hist

--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Spacer.txt')\n",
+    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -155,6 +155,7 @@
     "        Measure_Name = '{}_scaled'.format(Y_Col_Name[idx])    \n",
     "    else:\n",
     "        Measure_Name = Y_Col_Name[idx]\n",
+    "    print(Measure_Name)\n",
     "# # removing non-informative positions where no base diversity exists, base one hot encoding\n",
     "    Expr_avg = ExpressionStrength_HeatMap(SeqDat_Hadj, Measure_Name) #Expression_Column)\n",
     "    Expr_avg = Insert_row_(Positions_removed, Expr_avg, np.zeros([len(Positions_removed),4])*np.nan)\n",
@@ -215,11 +216,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mydist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# For histogram of sequence diversity you can either root the distance to the most common nucleotide on each position or provide an external reference\n",
-    "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=1)\n",
+    "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=0)\n",
     "    \n",
     "# plt.rc('text', usetex=False)\n",
-    "plt.hist(mydist*100, bins=20) # BG42: [3,6:221]; BG35:[2,222:]\n",
+    "plt.hist(mydist, bins=25, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
     "plt.xlabel('Sequence distance in %', fontsize=FigFontSize)\n",
     "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "plt.tight_layout()\n",
@@ -247,13 +257,13 @@
    "source": [
     "# stacked histogram of number of each nucleotide per position\n",
     "OH_matrix = np.stack(SeqDat_Hadj['OneHot'].values)\n",
-    "OH_df = pd.DataFrame(np.sum(OH_matrix, axis=0), columns=['A','C','G','T'])\n",
+    "OH_df = pd.DataFrame(np.sum(OH_matrix, axis=0)/len(SeqDat_Hadj), columns=['A','C','G','T'])\n",
     "OH_df = Insert_row_(Positions_removed, OH_df, np.zeros([len(Positions_removed),4]))\n",
     "OH_df[['A','C','G','T']].plot(kind='bar', stacked=True)\n",
     "# ax.set_xticklabels(rotation=0, fontsize=16)\n",
     "# plt.tick_params(axis='x', labelsize=18)\n",
-    "plt.xlabel('Position', fontsize=20)\n",
-    "plt.ylabel('Samples', fontsize=20)\n",
+    "plt.xlabel('Position', fontsize=FigFontSize)\n",
+    "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "\n",
     "Fig_ID = Name_Dict['SamplingDiv_File']\n",
     "SamplingDiv_File = os.path.join(Data_Folder, '{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Fig_ID, Fig_Type))\n",
