corrected standardized expression variance heatmap

--- a/RegressorTests/Regressor_Feeding.ipynb
+++ b/RegressorTests/Regressor_Feeding.ipynb
@@ -17,10 +17,10 @@
    "source": [
     "def make_Input(SeqLen=17):\n",
     "    import numpy as np\n",
-    "    from random import randint\n",
+    "    import random \n",
     "    # finding the '1' in the one-hot encoding for each position\n",
     "    # randint is inclusive the upper limit\n",
-    "    RandBinInput = [randint(0,3) for _ in range(SeqLen)]\n",
+    "    RandBinInput = [random.randint(0,3) for _ in range(SeqLen)]\n",
     "    # summing out the absolute position\n",
     "    myOnes = [np.sum(np.array([mult*4, pos])) for mult, pos in enumerate(RandBinInput)]\n",
     "    # print(myOnes)\n",
@@ -37,13 +37,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import joblib\n",
     "\n",
-    "minp = make_Input(17)\n",
+    "minp = np.vstack([make_Input(17) for _ in range(100)])\n",
     "\n",
-    "Regressor_File = 'SVR-StrainA.pkl'\n",
+    "Regressor_File = 'RFR-StrainB.pkl'\n",
     "myRegr = joblib.load(Regressor_File)\n",
-    "myRegr.predict(minp)"
+    "myExpr = myRegr.predict(minp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plot\n",
+    "%matplotlib inline\n",
+    "plot.hist(myExpr)\n"
    ]
   }
  ],
