--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
+    "Name_Dict = init_Exp2('config_Spacer.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -174,8 +174,9 @@
     "if eval(Name_Dict['Data_Standard']) and len(Y_Col_Name) == 2:\n",
     "    print('The variance plot identifies the positions on which bases have a statistically divergent effect on activity.')\n",
     "    print('Only positions are shown that display a significant difference of the mean based on a Student\\'s t-test.')\n",
+    "    Measure_Name = ['{}_scaled'.format(MeasName) for MeasName in Y_Col_Name]\n",
     "    #performing Students t-test for significant differences in the mean value of expression for each base on all positions\n",
-    "    AllDat = np.array([SeqDat_Hadj[lookup].values for lookup in Y_Col_Name])\n",
+    "    AllDat = np.array([SeqDat_Hadj[lookup].values for lookup in Measure_Name])\n",
     "    Ttest_result = ExpressionMean_ttest(AllDat[0,:], AllDat[1,:], list(SeqDat_Hadj['OneHot']))\n",
     "    # Calculating the variance between multi-library measurements\n",
     "    # A large cv shows divergent effects of bases on defined positions\n",
@@ -208,15 +209,6 @@
     "mydist = Sequence_Ref_DiffSum(SeqDat['Sequence_letter-encrypted'])\n",
     "\n",
     "A generic file name for figure export is set, but figure-export to svg is commented.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mydist"
    ]
   },
   {
