add mutalik and outlier remove

--- a/0-Workflow.ipynb
+++ b/0-Workflow.ipynb
@@ -54,19 +54,19 @@
     "# start User Input\n",
     "# File name of the library, in csv format\n",
     "# example input: 'Example1-Pput.csv', 'PromLib_EcolPtai.csv'\n",
-    "Data_File = 'Example1-Pput.csv' #'liu_bacillus.csv'  \n",
+    "Data_File = 'mutalik12_Ecol.csv' #'liu_bacillus.csv'  \n",
     "# Sequence column name\n",
-    "Sequence = 'Sequence'#'Sequence(5-3)'\n",
+    "Sequence = 'Short sequence'#'Sequence(5-3)'\n",
     "# column name of expression activity\n",
     "# example input: ['Promoter Activity'], ['Ecol Promoter Activity', 'Ptai Promoter Activity'],\n",
     "# Make sure all entries are within square brackets and hyphens\n",
-    "Y_Col_Name = ['Promoter Activity']#['GFP relative activity']\n",
+    "Y_Col_Name = ['sE o/exp']#['GFP relative activity']\n",
     "# Promoter ID column name\n",
     "# 'Strain ID'\n",
-    "ID_Col_Name = 'Strain ID'#'Name'\n",
+    "ID_Col_Name = 'Promoter'#'Name'\n",
     "# expression unit for plots\n",
     "# example: '$\\mu$M(GFP)/(gCDW*h)' 'GFP intensity'\n",
-    "Expression_Unit = 'GFP Activity'#'GFP Activity'\n",
+    "Expression_Unit = 'Expression'#'GFP Activity'\n",
     "# the availabity of replicates improves regressor training, if your data is based on statistical summaries you can generate random samples with the same statistical properties, \n",
     "# you need to provide column names for standard deviation, the mean is assumed to be in Y_Col_Name\n",
     "# Stats_Samples contains column names with the number of replicates\n",
@@ -111,11 +111,11 @@
     "# File_Base = Data_File.split('.')[0]\n",
     "# # the generated files will be stored in a subfolder with custom name\n",
     "# Data_Folder = 'data-{}'.format(File_Base)\n",
-    "try:\n",
-    "    os.mkdir(Data_Folder)\n",
-    "    print('Data directory ', Data_Folder, 'created.')\n",
-    "except FileExistsError:\n",
-    "    print('Already existent data directory ', Data_Folder, '.')\n",
+    "# try:\n",
+    "#     os.mkdir(Data_Folder)\n",
+    "#     print('Data directory ', Data_Folder, 'created.')\n",
+    "# except FileExistsError:\n",
+    "#     print('Already existent data directory ', Data_Folder, '.')\n",
     "\n",
     "# Definition of names\n",
     "# make specific changes prefereably in the user input space above.\n",
@@ -129,6 +129,8 @@
     "    'Y_Col_Name': Y_Col_Name, # ['Promoter Activity'], ['Ecol Promoter Activity', 'Ptai Promoter Activity'],\n",
     "    # Promoter ID column name\n",
     "    'ID_Col_Name': ID_Col_Name,\n",
+    "    # Decision whether to remove outlier from the data set\n",
+    "    'Revome_Outlier': False,\n",
     "    # information for generating samples from statistics\n",
     "    'Stats2Samples': Stats2Samples,\n",
     "    'Stats_Std': Stats_Std,\n",
@@ -139,9 +141,6 @@
     "    'Add_Feat': Add_Feat,\n",
     "    # set the desired figure file type here, e.g. svg, png, pdf\n",
     "    'Figure_Type': 'png',\n",
-    "    # base file naming\n",
-    "    'File_Base': File_Base,\n",
-    "    'Data_Folder': Data_Folder,\n",
     "    'HM_File': 'Plot_PositionNucleotideStats',\n",
     "    'SampSeqDist_File': 'Plot_SampleSequenceDistance',\n",
     "    'Entropy_File': 'Plot_PositionEntropy',\n",
@@ -168,6 +167,7 @@
     "\n",
     "# constructing the config.txt file\n",
     "with open('config.txt', 'w') as f:\n",
+    "    print('# {}'.format(time.strftime('%Y%m%d')), file=f)\n",
     "    print('# This file contains the naming conventions for all output files. It is automatically generated when going through step \"0-Workflow\".', file=f)\n",
     "    for key, value in Name_Dict.items():\n",
     "        print('{}: {}'.format(key, value), file=f)\n"
