--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Spacer.txt')\n",
+    "Name_Dict = init_Exp2('config_bsub.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -221,7 +221,7 @@
     "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=0)\n",
     "    \n",
     "# plt.rc('text', usetex=False)\n",
-    "plt.hist(mydist, bins=25, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
+    "plt.hist(mydist, bins=18, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
     "plt.xlabel('Sequence distance in %', fontsize=FigFontSize)\n",
     "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "plt.tight_layout()\n",
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(SeqDat[Y_Col_Name].values)\n",
+    "plt.hist(SeqDat[Y_Col_Name].values, bins=25)\n",
     "plt.xlabel(Name_Dict['Expression_Unit'], fontsize=FigFontSize)\n",
     "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "plt.legend(Y_Col_Name)\n",
